fix: tweak second dark mode colour

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ img {
         --primary-foreground: 0 0% 9%;
         --secondary: 0 0% 19.9%;
         --secondary-foreground: 0 0% 100% / 87%;
-        --muted: 0 0% 19.9%;
+        --muted: 0 0% 15.7%;
         --muted-foreground: 0 0% 100% / 60%;
         --accent: 207 39.1% 59.4%;
         --accent-foreground: 0 0% 100% / 87%;
